--- a/playbooks/nginx/install-nginx.yml
+++ b/playbooks/nginx/install-nginx.yml
@@ -2,15 +2,14 @@
 - name: Install nginx to VM:PROD
   hosts: all
   become: true
+  vars_files:
+    - vars.yml
 
   vars:
     src_file: index.html
     dst_file: /usr/local/nginx/html/index.html
 
   tasks:
-
-    - name: apt update
-      shell: apt-get update
 
     - name: Install nginx and htop
       apt: name={{ item }} state=latest forced=yes
